--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.13.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.7",
+    "business-app": "file:",
     "next": "13.4.8",
     "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
